# SDL_Chess

./: CMakeLists.txt  main.cpp
Scripts/: Button.h
Scripts/Field/: Cell.cpp  Cell.h  Field.cpp  Field.h  cell_render.cpp  handlers.cpp
Scripts/Figure/: Figure.cpp  Figure.h  Figures.h
Scripts/Figure/Bishop/: Bishop.cpp  Bishop.h
Scripts/Figure/King/: King.cpp  King.h
Scripts/Figure/Knight/: Knight.cpp  Knight.h
Scripts/Figure/Pawn/: Pawn.cpp  Pawn.h
Scripts/Figure/Queen/: Queen.cpp  Queen.h
Scripts/Figure/Rook/: Rook.cpp  Rook.h
Scripts/Game/: Game.cpp  Game.h
Scripts/Menu/: Menu.cpp  Menu.h
Scripts/Sidebar/: Button.cpp  Button.h  Sidebar.cpp  Sidebar.h  cells_funcs.cpp
sprites/: knight.txt  menu.txt  pawn.txt  queen.txt  reset.txt  rook.txt  rules.txt  wb_res.txt  wk_res.txt
sprites/menu/: menu1.txt  menu2.txt  menu3.txt  menu4.txt  menu5.txt  menu6.txt  menu7.txt  menu8.txt  menu9.txt
